--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ola Oke's Portfolio</title>
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple website hosted on GitHub Pages.</p>
+    <header>
+        <div class="logo">Ola Oke</div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="menu-toggle" id="menu-toggle">
+                ☰
+            </div>
 </body>
 </html>
