--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
             <div class="menu-toggle" id="menu-toggle">
                 ☰
             </div>
+            </nav>
+    </header>
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1>Hi, I’m Ola Oke, a Full-Stack Web Developer</h1>
+            <p>I build responsive, user-friendly websites and applications.</p>
+            <a href="#projects" class="btn">View My Work</a>
+            <a href="#contact" class="btn">Contact Me</a>
+        </div>
+    </section>
 </body>
 </html>
