--- a/index.html
+++ b/index.html
@@ -30,5 +30,16 @@
             <a href="#contact" class="btn">Contact Me</a>
         </div>
     </section>
+    <section id="about" class="about">
+        <h2>About Me</h2>
+        <div class="about-content">
+            <img src="https://via.placeholder.com/200" alt="Placeholder Image" class="profile-photo">
+            <p>
+                I'm a passionate web developer with a love for building interactive and user-friendly applications. 
+                My journey in coding began with a curiosity for technology, and it has grown into a deep passion 
+                for solving problems and creating digital experiences.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
