--- a/index.html
+++ b/index.html
@@ -41,5 +41,43 @@
             </p>
         </div>
     </section>
+    <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <div class="skills-list">
+            <div class="skill">
+                <span>HTML</span>
+                <progress value="90" max="100"></progress>
+            </div>
+            <div class="skill">
+                <span>CSS</span>
+                <progress value="85" max="100"></progress>
+            </div>
+            <div class="skill">
+                <span>JavaScript</span>
+                <progress value="80" max="100"></progress>
+            </div>
+            <div class="skill">
+                <span>React</span>
+                <progress value="75" max="100"></progress>
+            </div>
+            <div class="skill">
+                <span>Node.js</span>
+                <progress value="70" max="100"></progress>
+            </div>
+            <div class="skill">
+                <span>MongoDB</span>
+                <progress value="65" max="100"></progress>
+            </div>
+            <div class="skill">
+                <span>Ruby on Rails</span>
+                <progress value="65" max="100"></progress>
+            </div>
+            <div class="skill">
+                <span>PHP</span>
+                <progress value="65" max="100"></progress>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
