--- a/index.html
+++ b/index.html
@@ -78,6 +78,44 @@
             </div>
         </div>
     </section>
+    
+    <section id="projects" class="projects">
+        <h2>Projects</h2>
+        <div class="project-list">
+
+            <!-- Project 1 -->
+            <div class="project">
+                <img src="https://via.placeholder.com/300" alt="Project Screenshot">
+                <h3>Project Name 1</h3>
+                <p>Short description of the project. Highlight what it does and its key features.</p>
+                <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
+                <a href="#" target="_blank">Live Demo</a> |
+                <a href="#" target="_blank">GitHub Repo</a>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="project">
+                <img src="https://via.placeholder.com/300" alt="Project Screenshot">
+                <h3>Project Name 2</h3>
+                <p>Short description of the project. Highlight what it does and its key features.</p>
+                <p><strong>Technologies:</strong> React, Node.js, MongoDB</p>
+                <a href="#" target="_blank">Live Demo</a> |
+                <a href="#" target="_blank">GitHub Repo</a>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project">
+                <img src="https://via.placeholder.com/300" alt="Project Screenshot">
+                <h3>Project Name 3</h3>
+                <p>Short description of the project. Highlight what it does and its key features.</p>
+                <p><strong>Technologies:</strong> Vue.js, Firebase</p>
+                <a href="#" target="_blank">Live Demo</a> |
+                <a href="#" target="_blank">GitHub Repo</a>
+            </div>
+
+        </div>
+    </section>
+
 
 </body>
 </html>
