About me page was created

--- a/index.html
+++ b/index.html
@@ -30,17 +30,7 @@
             <a href="#contact" class="btn">Contact Me</a>
         </div>
     </section>
-    <section id="about" class="about">
-        <h2>About Me</h2>
-        <div class="about-content">
-            <img src="https://via.placeholder.com/200" alt="Placeholder Image" class="profile-photo">
-            <p>
-                I'm a passionate web developer with a love for building interactive and user-friendly applications. 
-                My journey in coding began with a curiosity for technology, and it has grown into a deep passion 
-                for solving problems and creating digital experiences.
-            </p>
-        </div>
-    </section>
+    
     <section id="skills" class="skills">
         <h2>Skills</h2>
         <div class="skills-list">
@@ -78,7 +68,7 @@
             </div>
         </div>
     </section>
-    
+
     <section id="projects" class="projects">
         <h2>Projects</h2>
         <div class="project-list">
@@ -114,6 +104,39 @@
             </div>
 
         </div>
+    </section>
+    <section id="contact" class="contact">
+        <h2>Get in Touch</h2>
+        <p>If you'd like to work together or have any questions, feel free to reach out!</p>
+
+        <form id="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">Send Message</button>
+        </form>
+
+        <h3>Email Me:</h3>
+        <p><a href="mailto:your-email@example.com">yinkaoke007@gmail.com</a></p>
+
+        <h3>Connect with Me:</h3>
+        <div class="social-links">
+            <a href="#" target="_blank">GitHub</a> |
+            <a href="#" target="_blank">LinkedIn</a> |
+            <a href="#" target="_blank">Twitter</a>
+        </div>
+
+        <!-- Optional: Embed Google Maps -->
+        <!-- <div class="map">
+            <iframe src="YOUR_MAP_URL" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div> -->
+
     </section>
 
 
