Page created  modified

--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ola Oke | Skills</title>
     <script defer src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body id="top">
 
