--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about-content">
-            <img src="https://via.placeholder.com/200" alt="Placeholder Image" class="profile-photo">
+            <img src="profile-photo.jpg" alt="Ola Oke" class="profile-photo">
+
+
             <p>
                 I'm a passionate web developer with a love for building interactive and user-friendly applications. 
                 My journey in coding began with a curiosity for technology, and it has grown into a deep passion 
