--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <div class="hero-content">
             <h1>Hi, I’m Ola Oke, a Full-Stack Web Developer</h1>
             <p>I build responsive, user-friendly websites and applications.</p>
-            <a href="#projects" class="btn">View My Work</a>
-            <a href="#contact" class="btn">Contact Me</a>
+            <a href="projects.html" class="btn">View My Work</a>
+            <a href="contact.html" class="btn">Contact Me</a>
+            
+
         </div>
     </section>
     <footer>
